[project]
name = "echuu-livekit-agent"
version = "0.1.0"
description = "Minimal LiveKit voice agent for Echuu playground"
requires-python = ">=3.10,<4.0"
dependencies = [
    "livekit-agents[turn-detector]>=1.3.11,<2.0.0",
    "livekit-plugins-silero>=1.3.11,<2.0.0",
    "livekit-plugins-cartesia>=1.3.11,<2.0.0",
    "livekit-plugins-openai>=1.3.11,<2.0.0",
    "livekit-plugins-deepgram>=1.3.11,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
